[project]
name = "pandas_ti"
version = "0.1.0"
description = "A lightweight technical indicators library for pandas DataFrames"
authors = [
    { name = "Javier Calzada Espuny" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
keywords = ["pandas", "technical-indicators", "trading", "finance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pandas>=2.0",
    "numpy>=1.22",
    "scipy>=1.10",
    "statsmodels>=0.14",
]

[project.optional-dependencies]
dev = [
    "yfinance>=0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pandas_ti"]
